--- a/test2.ipynb
+++ b/test2.ipynb
@@ -20,6 +20,26 @@
     "    total += i \n",
     "print(total)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "total1 = 1\n",
+    "for i in range(1,5):\n",
+    "    total1 *= i\n",
+    "print(total1)"
+   ]
   }
  ],
  "metadata": {
